--- a/paint.html
+++ b/paint.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8"/>
     <title>나만의 스케치북!</title>
 
-    <script src="app.js"></script>
+    <script src="draw.js"></script>
+    <script src="fill.js"></script>
     <link rel="stylesheet" href="style.css"/>
   </head>
 
