--- a/paint.html
+++ b/paint.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>나만의 스케치북!</title>
 
-    <script src="draw.js"></script>
-    <script src="fill.js"></script>
+    <!-- <script src="draw.js"></script>
+    <script src="fill.js"></script> -->
     <link rel="stylesheet" href="style.css"/>
   </head>
 
 
-  <body onload="draw();">
-    <canvas id="canvas" width="300" height="200"></canvas>
-  </body>
+  <body>
+    <canvas id="canvasSetting" class="canvas"></canvas>
+    <div class="range_wrap">
+        <input type="range" id="brushSize" min="1" max="10" value="10" step="1">
+    </div>
+    <div class="botton_wrap">
+        <button id="fillBtn">Fill</button>
+        <button id="clearBtn">Clear</button>
+        <button id="saveBtn">Save</button>
+    </div>
 
+
+
+
+
+    <script src="paint.js"></script>
+</body>
 </html>
