--- a/paint.html
+++ b/paint.html
@@ -9,20 +9,45 @@
     <!-- <script src="draw.js"></script>
     <script src="fill.js"></script> -->
     <link rel="stylesheet" href="style.css"/>
+    <style>
+        .color {
+            width: 30px;
+            height: 30px;
+        }
+
+    </style>
   </head>
 
 
   <body>
     <canvas id="canvasSetting" class="canvas"></canvas>
-    <div class="range_wrap">
-        <input type="range" id="brushSize" min="1" max="10" value="10" step="1">
-    </div>
-    <div class="botton_wrap">
-        <button id="fillBtn">Fill</button>
-        <button id="clearBtn">Clear</button>
-        <button id="saveBtn">Save</button>
-    </div>
 
+    <div class="controls">
+        <!-- 브라시 사이즈 슬라이드로 선택 -->
+        <div class="range_wrap">
+            <input type="range" id="brushSize" min="1" max="10" value="10" step="1">
+        </div>
+
+        <!-- fill, clear, save 버튼 -->
+        <div class="botton_wrap">
+            <button id="fillBtn">Fill</button>
+            <button id="clearBtn">Clear</button>
+            <button id="saveBtn">Save</button>
+        </div>
+
+        <!-- color 선택 -->
+        <div id="colorControl" class="color_wrap">
+            <div class="color jsColor" style="background-color:#2c2c2c"></div>
+            <div class="color jsColor" style="background-color:white"></div>
+            <div class="color jsColor" style="background-color:#FF3B30"></div>
+            <div class="color jsColor" style="background-color:#FF9500"></div>
+            <div class="color jsColor" style="background-color:#FFCC00"></div>
+            <div class="color jsColor" style="background-color:#4CD963"></div>
+            <div class="color jsColor" style="background-color:#5AC8FA"></div>
+            <div class="color jsColor" style="background-color:#0579FF"></div>
+            <div class="color jsColor" style="background-color:#5856D6"></div>
+        </div>
+    </div>
 
 
 
