--- a/paint.html
+++ b/paint.html
@@ -37,15 +37,15 @@
 
         <!-- color 선택 -->
         <div id="colorControl" class="color_wrap">
-            <div class="color jsColor" style="background-color:#2c2c2c"></div>
-            <div class="color jsColor" style="background-color:white"></div>
-            <div class="color jsColor" style="background-color:#FF3B30"></div>
-            <div class="color jsColor" style="background-color:#FF9500"></div>
-            <div class="color jsColor" style="background-color:#FFCC00"></div>
-            <div class="color jsColor" style="background-color:#4CD963"></div>
-            <div class="color jsColor" style="background-color:#5AC8FA"></div>
-            <div class="color jsColor" style="background-color:#0579FF"></div>
-            <div class="color jsColor" style="background-color:#5856D6"></div>
+            <div class="color colorBtn" style="background-color:#2c2c2c"></div>
+            <div class="color colorBtn" style="background-color:white"></div>
+            <div class="color colorBtn" style="background-color:#FF3B30"></div>
+            <div class="color colorBtn" style="background-color:#FF9500"></div>
+            <div class="color colorBtn" style="background-color:#FFCC00"></div>
+            <div class="color colorBtn" style="background-color:#4CD963"></div>
+            <div class="color colorBtn" style="background-color:#5AC8FA"></div>
+            <div class="color colorBtn" style="background-color:#0579FF"></div>
+            <div class="color colorBtn" style="background-color:#5856D6"></div>
         </div>
     </div>
 
