--- a/paint.html
+++ b/paint.html
@@ -23,7 +23,7 @@
     <canvas id="canvasSetting" class="canvas"></canvas>
 
     <div class="controls">
-        <!-- 브라시 사이즈 슬라이드로 선택 -->
+        <!-- 브러시 사이즈 슬라이드로 선택 -->
         <div class="range_wrap">
             <input type="range" id="brushSize" min="1" max="10" value="10" step="1">
         </div>
