--- a/paint.html
+++ b/paint.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>나만의 스케치북!</title>
+    <title>나만의 스케치북</title>
 
     <!-- <script src="draw.js"></script>
     <script src="fill.js"></script> -->
@@ -13,7 +13,7 @@
   </head>
 
 
-  <body>
+  <body class="cursor">
     <div class="left">
         <div class="t-wrap">
             <p class="title">나만의 스케치북</p> <p class="title" style="font-size: 34px;">🥳</p>
@@ -24,14 +24,15 @@
     <div class="controls">
         
         <div class="range_wrap">
-            <!-- fill, clear, save 버튼 -->
-            <button id="fillBtn" class="botton">그리기</button><br>
+            <!-- brush, clear, save 버튼 -->
+            <button id="brushBtn" class="botton" style="background: rgb(255, 174, 0);">그리기</button><br>
+            <!-- <button id="eraseBtn" class="botton">지우개</button><br> -->
             <button id="clearBtn" class="botton">지우기</button><br>
             <button id="saveBtn" class="botton">저장</button><br>
 
             <!-- 브러시 사이즈 슬라이드로 선택 -->
             <div class="brush_size">
-                <input type="range" id="brushSize" min="0.1" max="10" value="2.5" step="0.1" orient="vertical">
+                <input type="range" id="brushSize" min="0.1" max="10" value="4" step="0.1" orient="vertical">
             </div>
             
         </div>
