코드정리, 그림판 구현 완료

--- a/paint.html
+++ b/paint.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>나만의 스케치북</title>
 
-    <!-- <script src="draw.js"></script>
-    <script src="fill.js"></script> -->
+    <!-- <script src="draw.js"></script>  -->
+    <!-- <script src="fill.js"></script>  -->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
     <link rel="stylesheet" href="style.css"/>
   </head>
-
 
   <body class="cursor">
     <div class="left">
@@ -39,15 +39,8 @@
 
         <!-- color 선택 -->
         <div id="colorControl" class="color_wrap">
-            
             <div class="color colorBtn" style="background-color:#2c2c2c"></div>
             <div class="color colorBtn" style="background-color:white; border: 1.3px solid black; box-sizing: border-box;"></div>
-
-             <!-- <div class="color colorBtn"><i class='fas fa-palette' style='font-size:30px; color:red'></i></div>
-
-            <div class="color colorBtn fas fa-palette" style="font-size: 30px; color:red;">
-            </div> -->
-
             <div class="color colorBtn" style="background-color:#FF3B30"></div>
             <div class="color colorBtn" style="background-color:#FF9500"></div>
             <div class="color colorBtn" style="background-color:#FFCC00"></div>
@@ -56,23 +49,7 @@
             <div class="color colorBtn" style="background-color:#0579FF"></div>
             <div class="color colorBtn" style="background-color:#5856D6"></div>
         </div>
-        
-        <!-- <ul id="colorControl" class="color_wrap">
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#2c2c2c'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:white'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#FF3B30'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#FF9500'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#FFCC00'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#4CD963'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#5AC8FA'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#0579FF'></i></li>
-            <li><a class="color colorBtn" ><i class='fas fa-palette' style='font-size:30px; color:#5856D6'></i></li>
-        </ul> -->
-
     </div>
-
-
-
 
     <script src="app.js"></script>
 </body>
