폴더 정리, 리드미 수정

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <title>나만의 스케치북</title>
 
-    <!-- <script src="draw.js"></script>  -->
-    <!-- <script src="fill.js"></script>  -->
+    <!-- <script src="js/draw-study.js"></script>  -->
+    <!-- <script src="js/fill-study.js"></script>  -->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
 
   <body class="cursor">
@@ -51,6 +51,6 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
